#1319 - Cross-Layer Relations
- Rearranging and simplifying the AnnotationDetailEditorPanel code
- Generally cleaning up and modernizing